--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE HTML>
+	<head>
+		 <link rel="stylesheet" type="text/css" href="style.css">
+
+		 <title>The More You Know</title>
+
+		 
+	</head>
+
+	<body>
+
+		<header>
+			<div class="list">
+				<ul>
+				  <li class="lefty">Company</li>
+				  <li class="righty">Contact</li>
+				  <li class="righty">About</li>
+				  <li class="righty">Home</li>
+				</ul>
+			</div>
+		</header>
+			<div class="title">
+				<h2>The More You Know</h2>
+			</div>
+
+			
+			<ul class="box-container">
+			  <li class="box-item"></li>
+			  <li class="box-item"></li>
+			  <li class="box-item"></li>
+			</ul>
+
+
+
+			<ul class="rectangle-container">
+			  <li class="rectangle-item"></li>
+			  <li class="rectangle-item"></li>
+			</ul>
+		
+
+
+			<div class="content">
+				<p>Damage report! When has justice ever been as simple as a rule book? Earl Grey tea, watercress sandwiches... and Bularian canapés? Are you up for promotion? Sorry, Data. The Enterprise computer system is controlled by three primary main processor cores, cross-linked with a redundant melacortz ramistat, fourteen kiloquad interface modules. Computer, belay that order. Our neural pathways have become accustomed to your sensory input patterns. You enjoyed that.	</p>
+
+				<img src="http://www.startrek.com/uploads/assets/db_articles/83eb256bbad194e9780b501a29ed66040747af54.jpg">
+			</div>
+
+		<footer>
+			
+			<p></p>
+		</footer>
+
+	</body>
